# memoriant-eval-sandbox-skill

./: AGENTS.md  README.md  SECURITY.md  gemini-extension.json
.claude-plugin/: plugin.json
agents/: eval-sandbox-runner.md
skills/eval-sandbox/: SKILL.md
src/: .gitignore  Makefile  pyproject.toml
src/aes/: cli.py  evidence.py  loader.py  models.py  runner.py
src/scenarios/: README.md  dark-factory-digital-twin.yaml  dark-factory-fault-escalation.yaml  dark-factory-spec-satisfaction.yaml  enterprise-ai-audit.yaml  example.yaml
src/tests/: test_aes_cli.py
src/tests/fixtures/: example.yaml
